--- a/index.html
+++ b/index.html
@@ -1,57 +1,120 @@
-<head>
- <title>Dave Testing</title>
-</head>
-<body onload=init()>
- <canvas id=gaugeCanvas width=200 height=200>No canvas in your browser...sorry...</canvas>
-</body>
-<script>
- function init()
- {
-  // Initialzing gauge
-      tempGauge = new steelseries.Radial('gaugeCanvas', {
-               gaugeType: steelseries.GaugeType.TYPE4,
-    minValue:0,
-                  maxValue:150,
-                  size: 200,
-                  frameDesign: steelseries.FrameDesign.BRASS,
-    knobStyle: steelseries.KnobStyle.BRASS,
-           pointerType: steelseries.PointerType.TYPE6,
-           lcdDecimals: 0,
-                  section: null,
-                  area: null,
-                  titleString: 'Outside Temp',
-                  unitString: '°F',
-                  threshold: 100,
-                  lcdVisible: true
-                  });
+Stream1Name <- "Your_Stream_Name_1";
+Stream2Name <- "Your_Stream_Name_2";
+
+stream1 <- null;
+stream2 <- null;
+
+htmlresp <- "";
+
+const FEED_ID = "841838561";
+const API_KEY = "FKKyqnvMWmo3gurC9HRw2MEHyVq4YTHIpa1EXWpxLvwboTsp";
 
 
-    // Start the gauge update
-  setInterval(function(){
-            var site = "http://api.pachube.com/v2/feeds/9511.json?&key=GtGuoMKJSqv2tzqGvWaITLhlEDUxrYXSixqPSmlyj-s&&datastreams=7";
-  //alert('going for ' + site);
-  $.ajax({
-       type: 'GET',
-       url: site,
-       dataType: 'json',
-   cache: false,
-   data: {},
-   processData: true,
-       async: false, // you have to have this so the data will arrive before display
-       success: function(data_archive) {
-     //alert("the url returned success");
-    //alert("got back " + data_archive.datastreams[0].current_value);
-                        tempGauge.setValueAnimated(eval(data_archive.datastreams[0].current_value));
-   },
-   error: function(a){
-    //alert("here I am in the error routine");
-   }
-  });
-  //alert('after the get');
-  }, 10000);
- }
-</script>
+http.onrequest(function(req, resp) {
+    if (req.body == ""){
+        gethtmlresponse();
+        resp.send(200, htmlresp);//send this if just site was accessed and no requests
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type=text/javascript src=http://dl.dropbox.com/u/128855213/SteelSeries/tween-min.js></script>
-<script type=text/javascript src=http://dl.dropbox.com/u/128855213/SteelSeries/steelseries-min.js></script>
+    }
+});
+
+
+function gethtmlresponse(){
+
+
+//Google Line Chart
+local T1Data = blob(644);
+local T2Data = blob(644);
+getStreamData(FEED_ID)
+local cnt = 0;
+
+foreach(datapoint in stream1.datapoints) {
+    T1Data.writen(datapoint.value.tofloat(),'f');
+    cnt++;
+    //server.log(datapoint.value.tofloat());
+}
+foreach(datapoint in stream2.datapoints) {
+    T2Data.writen(datapoint.value.tofloat(),'f');
+    //server.log(datapoint.value.tofloat());
+}
+server.log("Number of Data Points: " + cnt);
+T1Data.seek(0,'b');
+T2Data.seek(0,'b');
+
+
+
+htmlresp = "<!DOCTYPE html>\r\n";
+htmlresp += "<html>\r\n";
+htmlresp += "<head>\r\n";
+
+//from google chart example for line chart
+htmlresp += "<script type=\"text/javascript\" src=\"https://www.google.com/jsapi\"></script>\r\n";
+htmlresp += "<script type=\"text/javascript\">\r\n";
+htmlresp += "google.load(\"visualization\", \"1\", {packages:[\"corechart\"]});\r\n";
+htmlresp += "google.setOnLoadCallback(drawChart);\r\n";
+htmlresp += "function drawChart() {\r\n";
+htmlresp += "var data = google.visualization.arrayToDataTable([\r\n";
+htmlresp += "['Count',  '" + Stream1Name + "',   '" + Stream2Name + "'],\r\n";
+local dt = 6.0;
+local dtm = "";
+local t = 0;
+for (t = 0; t < cnt; t++){
+    try{
+        htmlresp += "['" + (cnt - t).tostring() + "',   " + T1Data.readn('f') + ",  " + T2Data.readn('f') + "],\r\n";
+    }
+    catch(e){
+        break;
+    }
+}
+htmlresp += "]);\r\n";
+htmlresp += "var options = {\r\n";
+//htmlresp += "title: 'Graph Title',curveType: 'function',legend: { position: 'bottom' }};\r\n";
+htmlresp += "title: 'Graph Title',";
+htmlresp += "curveType: 'function',";
+//htmlresp += "chartArea:{left:10,top:10,width:'100%',height:'500'}";
+htmlresp += "};\r\n";
+htmlresp += "var chart = new google.visualization.LineChart(document.getElementById('chart_div'));\r\n";
+htmlresp += "chart.draw(data, options);\r\n";
+htmlresp += "}\r\n";
+htmlresp += "</script></head>\r\n";
+
+htmlresp += "<body>\r\n";
+
+//display google chart with 2 steams on 1 chart
+htmlresp += "<div id=\"chart_div\"></div>\r\n"
+
+//get Xively png chart for each stream if you want 
+//htmlresp += "<img src=\"https://api.xively.com/v2/feeds/"; + FEED_ID + "/datastreams/" + Stream1Name + ".png?c=2188c5&g=true&t=%22" + Stream1Name + "%22&b=true&scale=manual&min=-25&max=100&h=200\"><br>";
+//htmlresp += "<img src=\"https://api.xively.com/v2/feeds/"; + FEED_ID + "/datastreams/" + Stream2Name + ".png?c=FFCC33&g=true&t=%22" + Stream2Name + "%22&b=true&scale=manual&min=-25&max=100&h=200\"><br>";
+
+
+htmlresp += "</body>\r\n";
+htmlresp += "</html>\r\n";
+
+}
+
+function getStreamData(feedID){
+
+    local trigger_url = "https://api.xively.com/v2/feeds/"; + FEED_ID + ".json?duration=6hours&interval=0&limit=600";
+    //may need to play with the limit=600 number to make sure you are getting all the available reading for last 6 hrs.
+    local req = http.get(trigger_url, {"X-ApiKey":API_KEY, "User-Agent":"xively-Imp-Lib/1.0"});     //add headers
+    local res = req.sendsync();         //send request
+    //server.log(res.body);
+    local data = http.jsondecode(res.body);
+    local dataStreams = data.datastreams;
+
+    
+    foreach(s in dataStreams) {
+        if (s.id == Stream1Name) {
+            server.log("Xively Stream: " + s.id + " found.");
+            stream1 = s;
+        }
+        if (s.id == Stream2Name) {
+            server.log("Xively Stream: " + s.id + " found.");
+            stream2 = s;
+        }
+    }
+
+    return;
+
+};
